--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,53 @@
 data
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Node dependencies
+node_modules/
+
+# Bun lockfile
+bun.lockb
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build outputs
+dist
+.next/
+out/
+build/
+.output/
+.vercel/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Test outputs
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+
+# Add your specific output directories here!
+# Example: data/
+# Example: translation_outputs/
