--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-data
+# Dependency directories
+node_modules/
+bun.lockb
+
+# Build outputs
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # Logs
 logs
@@ -6,48 +17,30 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# Node dependencies
-node_modules/
-
-# Bun lockfile
-bun.lockb
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build outputs
-dist
-.next/
-out/
-build/
-.output/
-.vercel/
-
-# IDEs and editors
-.vscode/
+# Editor directories and files
 .idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+.DS_Store
 
 # OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Test outputs
 coverage/
 .nyc_output/
 
-# Temporary files
-*.tmp
-
-# Add your specific output directories here!
-# Example: data/
-# Example: translation_outputs/
+# Daedumi specific
+*-intermediates/
+.translation-intermediates/
