--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "daedumi",
+  "name": "dadeumi",
   "version": "0.8.0",
-  "description": "Daedumi - An AI-powered literary translation workflow inspired by the Korean method of iterative textile refinement",
+  "description": "Dadeumi - An AI-powered literary translation workflow inspired by the Korean method of iterative textile refinement",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "bin": {
-    "daedumi": "./dist/cli.js"
+    "dadeumi": "./dist/cli.js"
   },
   "scripts": {
     "build": "npx tsup && tsc --project tsconfig.build.json --emitDeclarationOnly --declaration --declarationDir dist && mv dist/index.d.ts dist/index.d.mts && cp dist/index.d.mts dist/index.d.cts",
@@ -28,7 +28,7 @@
     "gpt",
     "nlp",
     "language",
-    "daedumi",
+    "dadeumi",
     "gpt-4",
     "claude-3",
     "korean",
@@ -60,12 +60,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hrishioa/daedumi.git"
+    "url": "git+https://github.com/hrishioa/dadeumi.git"
   },
   "bugs": {
-    "url": "https://github.com/hrishioa/daedumi/issues"
+    "url": "https://github.com/hrishioa/dadeumi/issues"
   },
-  "homepage": "https://github.com/hrishioa/daedumi",
+  "homepage": "https://github.com/hrishioa/dadeumi",
   "author": "Hrishi Olickel <hrishiolickel@gmail.com> (https://olickel.com)",
   "license": "MIT",
   "private": false,
@@ -80,7 +80,10 @@
   },
   "devDependencies": {
     "@swc/core": "^1.7.26",
-    "@types/node": "^20.12.5",
+    "@types/chalk": "^0.4.31",
+    "@types/commander": "^2.12.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/node": "^20.17.30",
     "bun-types": "latest",
     "publint": "^0.2.7",
     "tsup": "^8.0.2",
