--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
+    "daedumi": "^0.8.0",
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.3.5",
     "openai": "^4.32.0",
